--- a/Owens Capstone Project/Capstone Project/index.html
+++ b/Owens Capstone Project/Capstone Project/index.html
@@ -19,7 +19,7 @@
 
 <div id="id01" class="modal">
   
-  <form class="modal-content animate" action="/action_page.php" method="post">
+  <form class="modal-content animate" action="/login.php" method="post">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
       <img src="pictures/avatar.png" alt="Avatar" class="avatar" width="100%" height="100%">
