--- a/Owens Capstone Project/Capstone Project/about.html
+++ b/Owens Capstone Project/Capstone Project/about.html
@@ -16,7 +16,7 @@
   <header>
     <div class="nav">
       <ul>
-        <li class="home"><a href="index.html">Home</a></li>
+        <li class="home"><a href="/">Home</a></li>
         <li class="menu"><a href="menu.html">Menu</a></li>
         <li class="rewards"><a href="rewards.html">Rewards</a></li>
         <li class="signin"><a href="signin.html">Sign in</a></li>
