--- a/Owens Capstone Project/Capstone Project/index.html
+++ b/Owens Capstone Project/Capstone Project/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<script>window.location.replace("main.php");</script>
+<script>window.location.replace("/");</script>
 <body>
 
 <div class="header">
@@ -13,7 +13,7 @@
 </div>
 
 <div class="topnav">
-  <a href="index.html">Home</a>
+  <a href="index.php">Home</a>
   <a href="menu.html">Menu</a>
   <a href="rewards.html">Rewards</a>
   <button class="login" onclick="document.getElementById('id01').style.display='block'" style="width:auto;float:right;font-family: Arial;">Login</button>
