--- a/Owens Capstone Project/Capstone Project/menu.html
+++ b/Owens Capstone Project/Capstone Project/menu.html
@@ -5,25 +5,108 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body class="coffee">
-  <header>
-    <div class="nav">
-      <ul>
-        <li class="home"><a href="/">Home</a></li>
-        <li class="menu"><a href="menu.html">Menu</a></li>
-        <li class="rewards"><a href="rewards.html">Rewards</a></li>
-        <li class="signin"><a href="signin.html">Sign in</a></li>
-      </ul>
+<body>
+ <div class="header">
+  <h1>Menu</h1>
+  
+</div>
+
+<div class="topnav">
+  <a href="home.html">Home</a>
+  <a href="menu.html">Menu</a>
+  <a href="rewards.html">Rewards</a>
+  <button class="login" onclick="document.getElementById('id01').style.display='block'" style="width:auto;float:right;font-family: Arial;">Login</button>
+
+<div id="id01" class="modal">
+  
+  <form class="modal-content animate" action="/action_page.php" method="post">
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <img src="pictures/avatar.png" alt="Avatar" class="avatar" width="100%" height="100%">
     </div>
-  </header>
+
+    <div class="container">
+      <label for="uname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+        
+      <button class="login" type="submit">Login</button>
+      <label>
+        <input type="checkbox" checked="checked" name="remember"> Remember me
+      </label>
+    </div>
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn"><b>Cancel</b></button>
+      <a class="btn"href="#" style="float:right;padding: 10px 18px;background-color: #333;color: #f2f2f2;">Forgot password?</a>
+	  <a class="btn"href="join.html" style="text-decoration:none;float:right;padding: 10px 18px;background-color: #333;color: #f2f2f2;">Join now</a>
+    </div>
+  </form>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('id01');
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
+</div>
+
+<div style="padding:20px;">
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="form.html">
+      <img src="pictures/cappuccino.jpg" alt="Cappuccino" width="600" height="400">
+    </a>
+    <div class="desc">Cappuccino</div>
+  </div>
+</div>
+
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="form.html">
+      <img src="pictures/iced-latte.jpg" alt="Iced Latte" width="600" height="400">
+    </a>
+    <div class="desc">Iced Latte</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="form.html">
+      <img src="pictures/espresso.jpg" alt="Espresso" width="600" height="400">
+    </a>
+    <div class="desc">Espresso</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="form.html">
+      <img src="pictures/caramel_macchiato.jpg" alt="Caramel Macchiato" width="600" height="400">
+    </a>
+    <div class="desc">Caramel Macchiato</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+
+<div style="padding:6px;">
+
 <div class="footer">
 		<form class="form-inline" action="#">
-		<ul>
-        <li class="about"><a href="about.html">About Us</a></li>
-		</ul>
   <label for="email">Join our mailing list:</label>
   <input type="email" id="email" placeholder="Enter email" name="email">
-  <button type="submit">Submit</button>
+  <button class="email" type="submit">Submit</button>
 </form>
 		</div>
 </body>
