--- a/Owens Capstone Project/Capstone Project/rewards.html
+++ b/Owens Capstone Project/Capstone Project/rewards.html
@@ -1,29 +1,73 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+<body>
+<div class="header">
+  <h1>Rewards</h1>
+  
+</div>
 
-<body class="coffee">
-  <header>
-    <div class="nav">
-      <ul>
-        <li class="home"><a href="/">Home</a></li>
-        <li class="menu"><a href="menu.html">Menu</a></li>
-        <li class="rewards"><a href="rewards.html">Rewards</a></li>
-        <li class="signin"><a href="signin.html">Sign in</a></li>
-      </ul>
+<div class="topnav">
+  <a href="home.html">Home</a>
+  <a href="menu.html">Menu</a>
+  <a href="rewards.html">Rewards</a>
+  <div class="cart"><a href="cart.html"><img border="0" alt="Cart" src="pictures/cart4.png" style="width:auto;height:20px;float:right;font-family: Arial;"></a></div>
+  <button class="login" onclick="document.getElementById('id01').style.display='block'" style="width:auto;float:right;font-family: Arial;">Login</button>
+
+<div id="id01" class="modal">
+  
+  <form class="modal-content animate" action="/action_page.php" method="post">
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <img src="pictures/avatar.png" alt="Avatar" class="avatar" width="100%" height="100%">
     </div>
-  </header>
+
+    <div class="container">
+      <label for="uname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+        
+      <button class="login" type="submit">Login</button>
+      <label>
+        <input type="checkbox" checked="checked" name="remember"> Remember me
+      </label>
+    </div>
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn"><b>Cancel</b></button>
+      <a class="btn"href="#" style="float:right;padding: 10px 18px;background-color: #333;color: #f2f2f2;">Forgot password?</a>
+	  <a class="btn"href="join.html" style="text-decoration:none;float:right;padding: 10px 18px;background-color: #333;color: #f2f2f2;">Join now</a>
+    </div>
+  </form>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('id01');
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
+</div>
+
+
+
+
 <div class="footer">
 		<form class="form-inline" action="#">
-		<ul>
-        <li class="about"><a href="about.html">About Us</a></li>
-		</ul>
   <label for="email">Join our mailing list:</label>
   <input type="email" id="email" placeholder="Enter email" name="email">
-  <button type="submit">Submit</button>
+  <button class="email" type="submit">Submit</button>
 </form>
 		</div>
 </body>
