--- a/Owens Capstone Project/Intranet/MontgomeryCup/public_html/order.html
+++ b/Owens Capstone Project/Intranet/MontgomeryCup/public_html/order.html
@@ -18,26 +18,9 @@
    <a href="Employee_Portal.php">Employee Portal</a>
 </div>
 
-<canvas id="canvas1" width="1000" height="1000"></canvas>
+<canvas id="canvas1" width="1000" height="2000" data-processing-sources="orderForm.pde"></canvas>
 <script id="script1">
-function sketchProc(processing) {
-  
-  // Override draw function, by default it will be called 60 times per second
-  processing.draw = function() {
-    // determine center and max clock arm length
-    
 
-    // erase background
-    processing.background(224);
-
-    
-  };
-  
-}
-
-var canvas = document.getElementById("canvas1");
-// attaching the sketchProc function to the canvas
-var p = new Processing(canvas, sketchProc);
 </script>
 
  <aside>
