update to employee ordering

--- a/Owens Capstone Project/Intranet/MontgomeryCup/public_html/order.html
+++ b/Owens Capstone Project/Intranet/MontgomeryCup/public_html/order.html
@@ -9,6 +9,11 @@
 <script src="processing.min.js"></script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script>
+var costDict={
+  Latte:2, Americano:2
+};
+</script>
 </head>
 <body>
 <div id="wrapper">
