--- a/Owens Capstone Project/Intranet/MontgomeryCup/public_html/order.html
+++ b/Owens Capstone Project/Intranet/MontgomeryCup/public_html/order.html
@@ -30,7 +30,7 @@ function submitCart(tcart){
 
     document.body.appendChild(form);
 
-    //form.submit();
+    form.submit();
 }
 </script>
 </head>
