--- a/Owens Capstone Project/Intranet/MontgomeryCup/public_html/order.html
+++ b/Owens Capstone Project/Intranet/MontgomeryCup/public_html/order.html
@@ -25,7 +25,8 @@ function submitCart(tcart){
     element1.value=tcart;
     element1.name="cart";
     form.appendChild(element1);  
-
+    element2.value="GC";
+    element2.name="location";
     
 
     document.body.appendChild(form);
