--- a/Owens Capstone Project/Intranet/MontgomeryCup/public_html/order.html
+++ b/Owens Capstone Project/Intranet/MontgomeryCup/public_html/order.html
@@ -27,7 +27,7 @@ function submitCart(tcart){
     form.appendChild(element1);  
     element2.value="GC";
     element2.name="location";
-    
+    form.appendChild(element2); 
 
     document.body.appendChild(form);
 
